--- a/app/src/main/res/layout/fragment_verifikasi_foto_selfie.xml
+++ b/app/src/main/res/layout/fragment_verifikasi_foto_selfie.xml
@@ -57,6 +57,7 @@
             app:cardCornerRadius="8dp">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_selfie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
