--- a/app/src/main/res/layout/activity_start_selfie.xml
+++ b/app/src/main/res/layout/activity_start_selfie.xml
@@ -6,8 +6,8 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DashboardActivity">
-    
+    tools:context=".view.startktp.StartKtpActivity">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_header"
         android:layout_width="match_parent"
@@ -18,14 +18,24 @@
         android:padding="16dp"
         android:background="@color/blue">
 
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+
             android:text="@string/pengambilan_dataset"
             android:textSize="@dimen/text_size_medium"
             android:textColor="@color/white"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_back"
             app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -64,6 +74,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -93,7 +104,7 @@
             <ImageView
                 android:id="@+id/iv_background"
                 android:layout_width="0dp"
-                android:layout_height="250dp"
+                android:layout_height="210dp"
                 android:layout_marginVertical="8dp"
                 android:background="@color/blue_secondary"
                 android:scaleType="centerCrop"
@@ -105,8 +116,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ktp_2"
-                app:layout_constraintTop_toTopOf="@id/iv_background"
+                android:src="@drawable/image_5"
                 app:layout_constraintStart_toStartOf="@id/iv_background"
                 app:layout_constraintEnd_toEndOf="@id/iv_background"
                 app:layout_constraintBottom_toBottomOf="@id/iv_background"/>
@@ -129,22 +139,22 @@
                 android:drawablePadding="8dp"
                 android:textSize="@dimen/text_size_normal"
                 android:textColor="@color/neutral_70"
-                app:drawableStartCompat="@drawable/ic_check_circle"
+                app:drawableStartCompat="@drawable/ic_masks"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_ketentuan"
-                android:text="Gunakan e-KTP fisik asli  " />
+                android:text="Siapkan masker" />
 
             <TextView
                 android:id="@+id/tv_ketentuan_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
-                android:text="Foto harus terang dan jelas, tidak boleh blur"
+                android:text="Siapkan Kacamata"
                 android:textSize="@dimen/text_size_normal"
                 android:textColor="@color/neutral_70"
                 app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:drawableStartCompat="@drawable/ic_check_circle"
+                app:drawableStartCompat="@drawable/ic_glasses"
                 />
 
             <TextView
@@ -152,12 +162,56 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="8dp"
-                android:text="Bukan hasil scan atau fotokopi"
+                android:text="Siapkan Topi"
                 android:textSize="@dimen/text_size_normal"
                 android:textColor="@color/neutral_70"
-                app:layout_constraintTop_toBottomOf="@id/tv_ketentuan_2"
+                app:layout_constraintTop_toTopOf="@id/tv_ketentuan_1"
+                app:layout_constraintStart_toStartOf="@id/tv_ketentuan_4"
+                app:drawableStartCompat="@drawable/ic_hat"/>
+
+            <TextView
+                android:id="@+id/tv_ketentuan_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="8dp"
+                android:text="Pencahayaan cukup"
+                android:textSize="@dimen/text_size_normal"
+                android:textColor="@color/neutral_70"
+                app:layout_constraintTop_toTopOf="@id/tv_ketentuan_2"
+                app:layout_constraintEnd_toEndOf="@id/iv_background"
+                app:drawableStartCompat="@drawable/ic_tungsten"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="16dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintTop_toBottomOf="@id/card_view"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_box_orange">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="8dp"
+                android:layout_marginHorizontal="8dp"
+                android:paddingVertical="4dp"
+                android:text="Pastikan wajah ada dalam bingkai"
+                android:textSize="@dimen/text_size_normal"
+                android:textColor="@color/neutral_70"
+                app:drawableStartCompat="@drawable/ic_warning"
                 app:layout_constraintStart_toStartOf="parent"
-                app:drawableStartCompat="@drawable/ic_cancel"/>
+                app:layout_constraintTop_toTopOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
@@ -167,19 +221,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp"
         android:drawablePadding="8dp"
         android:text="Semua data yang Anda unggah aman dan dirahasiakan."
         android:textSize="@dimen/text_size_normal"
         android:textColor="@color/neutral_70"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_take_picture_ktp"
+        app:layout_constraintBottom_toTopOf="@id/btn_take_picture_selfie"
         app:drawableStartCompat="@drawable/ic_gpp_good"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_take_picture_ktp"
+        android:id="@+id/btn_take_picture_selfie"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="16dp"
+        android:background="@drawable/rounded_box_blue"
         android:text="@string/ambil_foto_ktp"
         android:textStyle="bold"
         android:textColor="@color/white"
@@ -189,7 +245,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/dashboardActivity"
+        android:id="@+id/StartSelfie"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
