--- a/app/src/main/res/layout/fragment_berhasil_upload.xml
+++ b/app/src/main/res/layout/fragment_berhasil_upload.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/btn_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back"
+                android:src="@drawable/ic_close"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
-                android:text="Verifikasi Data"
+                android:text="Pengiriman data Berhasil"
                 android:textSize="@dimen/text_size_medium"
                 android:textColor="@color/white"
                 android:textStyle="bold"
@@ -43,52 +43,55 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_ktp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            app:cardElevation="0dp"
-            app:layout_constraintTop_toBottomOf="@id/ll_header"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/tv_sk"
-            android:backgroundTint="@color/backdrop"
-            app:cardCornerRadius="8dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_selfie"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                tools:listitem="@layout/item_selfie_preview" />
-
-
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/tv_sk"
+        <ImageView
+            android:id="@+id/iv_cheacklist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
-            android:drawablePadding="8dp"
-            android:text="Semua data yang Anda unggah aman dan dirahasiakan."
+            android:layout_marginVertical="16dp"
+            android:background="@color/blue_secondary"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_checklist"
+            app:layout_constraintTop_toBottomOf="@id/ll_header"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_greeting1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingHorizontal="16dp"
+            android:gravity="center"
+            android:text="Berhasil"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_large"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_cheacklist"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_greeting2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:paddingHorizontal="16dp"
+            android:gravity="center"
+            android:text="Terimakasih telah berpartisipasi dalam proses pengumpulan dataset"
             android:textSize="@dimen/text_size_normal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_take_picture_ktp"
-            app:drawableStartCompat="@drawable/ic_gpp_good"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_greeting1"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_take_picture_ktp"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_margin="16dp"
-            android:background="@drawable/rounded_box_blue"
-            android:text="@string/lanjutkan"
+            android:text="Kembali ke Halaman Awal"
             android:textStyle="bold"
+            android:background="@drawable/rounded_box_blue"
             android:backgroundTint="@color/blue"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_greeting2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
