--- a/app/src/main/res/layout/fragment_camera_selfie.xml
+++ b/app/src/main/res/layout/fragment_camera_selfie.xml
@@ -8,15 +8,25 @@
 
     <androidx.camera.view.PreviewView
         android:id="@+id/previewView"
-        android:layout_width="250dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/circle_sefie"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="30dp"
         android:importantForAccessibility="no"
         app:layout_constraintTop_toBottomOf="@id/tv_atribut"
+        app:layout_constraintBottom_toTopOf="@id/captureImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
     </androidx.camera.view.PreviewView>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scaleType="center"
+        android:src="@drawable/exclude_selfie"
+        app:layout_constraintStart_toStartOf="@id/previewView"
+        app:layout_constraintEnd_toEndOf="@id/previewView"
+        app:layout_constraintTop_toTopOf="@id/previewView"
+        app:layout_constraintBottom_toBottomOf="@id/previewView"/>
 
     <TextView
         android:id="@+id/tv_title"
