--- a/app/src/main/res/layout/fragment_berhasil_upload.xml
+++ b/app/src/main/res/layout/fragment_berhasil_upload.xml
@@ -63,6 +63,7 @@
             android:paddingHorizontal="16dp"
             android:gravity="center"
             android:text="Berhasil"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="@dimen/text_size_large"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +79,7 @@
             android:gravity="center"
             android:text="Terimakasih telah berpartisipasi dalam proses pengumpulan dataset"
             android:textSize="@dimen/text_size_normal"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_greeting1"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -88,6 +90,7 @@
             android:layout_height="40dp"
             android:layout_margin="16dp"
             android:text="Kembali ke Halaman Awal"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:background="@drawable/rounded_box_blue"
             android:backgroundTint="@color/blue"
