--- a/app/src/main/res/layout/fragment_verifikasi_foto_selfie.xml
+++ b/app/src/main/res/layout/fragment_verifikasi_foto_selfie.xml
@@ -74,6 +74,7 @@
             android:layout_marginVertical="8dp"
             android:drawablePadding="8dp"
             android:text="Semua data yang Anda unggah aman dan dirahasiakan."
+            android:textColor="@color/black"
             android:textSize="@dimen/text_size_normal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_take_picture_ktp"
@@ -86,6 +87,7 @@
             android:layout_margin="16dp"
             android:background="@drawable/rounded_box_blue"
             android:text="@string/lanjutkan"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:backgroundTint="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
